--- a/src/app/pages/not-found404/not-found404.component.html
+++ b/src/app/pages/not-found404/not-found404.component.html
@@ -1,5 +1,5 @@
 <div class="not-found fade-in">
-  <img src="../../../assets/404.svg" alt="not found" />
+  <img src="../../../assets/404.png" alt="not found" />
 
   <a href="./home" class="link">Go to Home</a>
 </div>
